# horsey-scraper

./: .gitignore  README.md  build.gradle.kts  horses.json  index.html  publish.sh  pyproject.toml  run.sh  settings.gradle.kts
docs/: paddypower-scraper.md
docs/superpowers/plans/: 2026-05-09-multi-market-lay-schema.md  2026-05-10-parallel-scraping.md  2026-05-10-us-racing.md  2026-05-11-betfair-api-migration.md  2026-05-11-region-cli-arg.md  2026-05-13-paddypower-scraper.md  2026-05-14-arb-finder.md  2026-05-14-paddypower-us.md  2026-05-26-paddypower-python-scraper.md  2026-05-26-python-rewrite-1-foundation.md  2026-05-26-python-rewrite-2-betfair.md  2026-05-26-python-rewrite-3-arb-and-cutover.md  2026-05-27-betfair-to-be-placed.md  2026-05-27-horses-output.md  2026-05-27-horses-web-page.md
examples/: horses.example.json
paddypower-py/: pyproject.toml
paddypower-py/src/paddypower_scraper/: api.py  cli.py  filtering.py  meetings.py  models.py  output.py  races.py
paddypower-py/tests/: conftest.py  test_api.py  test_cli.py  test_filtering.py  test_meetings.py  test_output.py  test_races.py
paddypower-py/tests/fixtures/: card63_meetings.json  racing_page_meeting.json
src/arb_finder/: __init__.py  calculator.py  cli.py  models.py  validate.py  validation.py
src/betfair_scraper/: __init__.py  assembly.py  classifier.py  cli.py  client.py  credentials.py  models.py  pivot.py  race_list.py  race_odds.py  responses.py  validate.py  validation.py
src/common/: __init__.py  isovalid.py  jsonio.py  markettype.py  regions.py  timeutil.py
src/paddypower_scraper/: __init__.py  browser.py  cli.py  filtering.py  models.py  output.py  races.py  validate.py  validation.py
tests/: test_api.py  test_arb_cli.py  test_arb_golden.py  test_arb_models.py  test_arb_validation.py  test_assembly.py  test_betfair_cli.py  test_betfair_client.py  test_betfair_golden.py  test_betfair_models.py  test_betfair_responses.py  test_betfair_validation.py  test_browser_smoke.py  test_calculator.py  test_classifier.py  test_cli.py  test_credentials.py  test_filtering.py  test_horses_cli.py  test_horses_golden.py  test_horses_models.py  test_horses_validation.py  test_isovalid.py  test_jsonio.py  test_markettype.py  test_meetings.py  test_output.py  test_paddy_models.py  test_paddy_validate_cli.py  test_paddy_validation.py  test_pivot.py  test_race_list.py  test_race_odds.py  test_races.py  test_regions.py  test_site.py  test_timeutil.py
tests/fixtures/: betfair_sample.json
(+79 files in other folders)
