[project]
name = "horsey-scraper"
version = "1.0.0"
description = "Horse-racing lay-price scraper + each-way arb finder (Betfair + PaddyPower)"
requires-python = ">=3.11"
dependencies = ["playwright>=1.42"]

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
betfair-scraper = "betfair_scraper.cli:main"
paddypower-scraper = "paddypower_scraper.cli:main"
arb-finder = "arb_finder.cli:main"

# NOTE: src/paddypower_scraper is added to this list in a later task, after the
# move creates the directory. Listing a non-existent package dir here would
# make `uv sync` fail.
[tool.hatch.build.targets.wheel]
packages = [
    "src/common",
    "src/betfair_scraper",
    "src/arb_finder",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "integration: live network/browser test, opt-in via RUN_INTEGRATION=1",
]
