[project]
name = "paddypower-scraper"
version = "0.1.0"
description = "PaddyPower racing scraper (Python) for horsey-scraper pipeline"
requires-python = ">=3.11"
dependencies = ["playwright>=1.42"]

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
paddypower-scraper = "paddypower_scraper.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/paddypower_scraper"]

[tool.pytest.ini_options]
markers = [
    "integration: live network/browser test, opt-in via RUN_INTEGRATION=1",
    "contract: shells out to Kotlin schema validator, opt-in via RUN_CONTRACT=1",
]
